--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+src/assets/data/contributions-from-committees/con-from-com-21-22.txt
+
+src/assets/data/contributions-from-committees/con-from-com-23-24.txt
+
+src/assets/data/contributions-from-committees/con-from-com-25-26.txt
