--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ dist-ssr
 *.sln
 *.sw?
 
+src/assets/data/
 src/assets/data/contributions-from-committees/con-from-com-21-22.txt
 
 src/assets/data/contributions-from-committees/con-from-com-23-24.txt
