adding all extra files

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ src/assets/data/contributions-from-committees/con-from-com-21-22.txt
 src/assets/data/contributions-from-committees/con-from-com-23-24.txt
 
 src/assets/data/contributions-from-committees/con-from-com-25-26.txt
+
+public/images
