--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@chakra-ui/react": "^2.10.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@google/generative-ai": "^0.24.0",
+    "@google/genai": "^1.3.0",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/google-genai": "^0.2.10",
+    "@langchain/openai": "^0.5.11",
     "@types/cors": "^2.8.17",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
@@ -25,12 +28,15 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "framer-motion": "^12.6.5",
+    "langchain": "^0.3.27",
     "mongoose": "^8.13.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "reflect-metadata": "^0.2.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
