--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
+    "fetch": "^1.1.0",
     "framer-motion": "^12.6.5",
     "langchain": "^0.3.27",
     "mongoose": "^8.13.2",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
