--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ src/assets/data/contributions-from-committees/con-from-com-23-24.txt
 src/assets/data/contributions-from-committees/con-from-com-25-26.txt
 
 public/images
+
+src/services/politicaldata.db
